<resources>
    <string name="app_name">TrabalhoFinal</string>
    <string name="app_title">Conexão Verde</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="save_login">Salvar dados de login</string>
    <string name="stay_logged_in">Manter logado</string>
    <string name="login">Entrar</string>
    <string name="register">Cadastre-se</string>
    <string name="more_info">Saiba Mais!</string>
    <string name="create_account">Criar uma conta</string>
    <string name="supplier">Fornecedor</string>
    <string name="client">Cliente</string>
    <string name="full_name">Nome Completo</string>
    <string name="address">Endereço</string>
    <string name="district">Bairro</string>
    <string name="city">Cidade</string>
    <string name="finalize">Finalizar</string>
    <string name="back">Voltar</string>
    <string name="choose_button_pesquisar">PESQUISAR</string>
    <string name="choose_text_info">Aperte o botão abaixo para avaliar as opções:</string>
    <string name="choose_text_type">Tipo de Árvore:</string>
    <string name="choose_text_size">Escolha o tamanho da Arvore:</string>
    <string name="choose_text_title">Escolha um tipo de Arvore que deseja plantar:</string>
    <string name="logged_text_quit">Sair</string>
    <string name="logged_text_statistic">Estatística</string>
    <string name="logged_text_stock">Estoque</string>
    <string name="logged_text_register">Cadastrar</string>
    <string name="logged_text_request">Requisitar</string>
    <string name="logged_text_title">Seja bem-vindo, </string>
    <string name="info_text_description">Nosso aplicativo conecta pessoas a um projeto social de revitalização urbana por meio da doação de mudas de árvores. Ele incentiva o reflorestamento urbano, facilitando o acesso a mudas para que qualquer pessoa possa cultivar sua própria árvore e contribuir para um ambiente mais verde.</string>
    <string name="info_textview_link1">Clique aqui para acessar o site</string>
    <string name="info_text_subtitle">Mais informações</string>
    <string name="info_text_back">Voltar</string>
    <string name="plant_text_description">Descrição</string>
    <string name="plant_text_amount">Quantidade</string>
    <string name="plant_text_species">Espécie</string>
    <string name="plant_text_name">Nome</string>
    <string name="plant_text_subtitle">Cadastre suas Mudas:</string>
    <string name="plant_text_title">Bem-vindo fornecedor!</string>
    <string name="link3">https://g1.globo.com/am/amazonas/noticia/2019/07/30/uma-das-capitais-com-piores-indices-de-arborizacao-em-todo-o-pais-manaus-busca-reacao-com-campanhas-de-plantio-de-especies.ghtml</string>
    <string name="link2">https://g1.globo.com/meio-ambiente/noticia/2025/01/10/2024-e-o-primeiro-da-historia-a-ultrapassar-marca-de-15c-de-aquecimento.ghtml</string>
    <string name="link1">https://www.revide.com.br/noticias/cidades/plante-uma-arvore/</string>
    <string name="str_dialog_title">Digite a quantidade de mudas</string>
    <string name="str_dialog_quantity">Quantidade de mudas</string>
    <string name="str_dialog_confirm">Confirmar</string>
    <string name="str_dialog_cancel">Cancelar</string>
    <string name="str_dialog_namePlant">Nome da Planta</string>
    <string name="str_dialog_sizePlant">Tamanho da Planta</string>
    <string name="str_choose_frutifera">Frutifera?</string>
</resources>