<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/dialogQT_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_dialog_title"
        android:textSize="18sp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/textQT_Quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/str_dialog_quantity" />

    <Button
        android:id="@+id/buttonQT_Confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_dialog_confirm"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/buttonQT_Cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_dialog_cancel"
        android:layout_marginTop="5dp" />

</LinearLayout>