<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.plant.PlantActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plant_text_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24sp"
        android:textStyle="bold"
        android:textColor="@color/light_green"
        android:textSize="32sp"
        android:textAlignment="center"
        >
    </TextView>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineP20"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />


    <TextView
        android:id="@+id/plant_text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plant_text_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineP20"
        android:layout_marginTop="24dp"
        android:textColor="@color/light_green"
        android:textSize="16sp"
        android:textAlignment="center">

    </TextView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textlayout_namePlant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/plant_text_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plant_text_register">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_namePlant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textlayout_species"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/plant_text_species"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textlayout_namePlant">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_species"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textlayout_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/plant_text_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textlayout_species">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>


    <Spinner
        android:id="@+id/plant_spinner_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/plant_spinner_type"
        app:layout_constraintTop_toBottomOf="@id/textlayout_amount"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:id="@+id/plant_spinner_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Type"
        app:layout_constraintStart_toEndOf="@id/plant_spinner_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textlayout_amount"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textlayout_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/plant_text_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plant_spinner_size">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_back"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textlayout_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="@color/red"/>

</androidx.constraintlayout.widget.ConstraintLayout>